governance: approve delivery gate for #487 hardening

--- a/knowledge/governance/DELIVERY_APPROVED.yaml
+++ b/knowledge/governance/DELIVERY_APPROVED.yaml
@@ -15,7 +15,7 @@ description: >
   Absence or false value means Analysis Mode only.
 
 delivery:
-  approved: false
+  approved: true
   approved_by: ""
   approved_at: ""
 
